# lmagent

./: .cursorrules  .editorconfig  .gitignore  .lmagent  .windsurfrules  AGENTS.md  AGENTS_CATALOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  _extract_examples.js  agents_audit_report.md  create_skill.py  install.js  lmagent.js  package-lock.json  package.json  pyproject.toml  qubiit-lmagent-3.1.5.tgz  qubiit-lmagent-3.1.6.tgz  qubiit-lmagent-3.1.7.tgz  qubiit-lmagent-3.1.8.tgz  qubiit-lmagent-3.1.9.tgz  refactor.js  skills_overview.txt  templates_list.txt  v35sh.sh  validate_skills.py
.agent/: README.md
.agent/rules/: agents-ia.md  python-style.md  typescript-style.md
.agent/workflows/: deploy.md
.agents/config/: models.yaml  settings.yaml  tools.yaml
.agents/docs/: architecture-reference.md  commands.md  customization-guide.md  getting-started.md  how-to-start.md  navigation-index.md  usage-guide.md
.agents/memory/: 01-global.md  02-active-context.md  03-tech-stack.md  04-decision-log.md  05-product-state.md  06-conventions.md
.agents/rules/: 00-lmagent.md  00-master.md  01-workflow.md  02-tech-stack.md  03-code-style.md  04-security.md  05-testing.md  06-api-design.md  07-documentation.md  08-agents-ai.md  09-automations.md  10-git-flow.md  11-prompt-engineering.md  12-cloud-native.md  13-performance-baseline.md
.agents/scripts/: create_skill.js  validate_skills.js
.agents/skills/ai-agent-engineer/: SKILL.md  skill.yaml
.agents/skills/api-designer/: SKILL.md  skill.yaml
.agents/skills/architect/: SKILL.md  skill.yaml
.agents/skills/automation-engineer/: SKILL.md  skill.yaml
.agents/skills/backend-engineer/: SKILL.md  skill.yaml
.agents/skills/blockchain-engineer/: SKILL.md  skill.yaml
.agents/skills/bmad-methodology/: SKILL.md  skill.yaml
.agents/templates/: .gitignore  PROJECT_KICKOFF.md  SKILL_TEMPLATE.md  SKILL_TEMPLATE.yaml  USAGE.md  spec.yaml
.agents/workflows/: bugfix-backend.md  generate-prd.md  ideation.md  new-agent-ia.md  new-automation.md  new-feature.md  optimize-performance.md  resolve-github-issue.md  security-review.md  spec-driven.md  testing-strategy.md
.cline/memory/: 03-learnings.md
.clinerules/: 00-lmagent.md
.codex/: 00-lmagent.md
.cursor/rules/: 00-lmagent.mdc  lmagent.mdc
.github/: copilot-instructions.md
.github/instructions/: 00-lmagent.md
.opencode/rules/: 00-lmagent.md
.roo/rules/: 00-lmagent.md
.trae/rules/: lmagent.md
.windsurf/rules/: lmagent.md
agents/: __init__.py  cli.py  runtime.py
agents/tools/: __init__.py  base_tool.py  database_tool.py  edit_lint_tool.py  file_tool.py  git_tool.py  http_tool.py  lint_tool.py  shell_tool.py  test_tool.py
config/: commands.yaml  levels.yaml  settings.yaml  tools-extended.yaml  tools.yaml
docs/: getting-started.md  how-to-start.md  usage-guide.md
lmagent/: .cursorrules  .env.example  .lmagent  AGENTS.md  Dockerfile.sandbox  README.md
lmagent/checklists/: level-0-trivial.md  level-1-small.md  level-2-medium.md  level-3-complex.md  level-4-enterprise.md
lmagent/config/: models.yaml
lmagent/docs/: commands.md  customization-guide.md  getting-started.md  navigation-index.md
lmagent/rules/: agents-ia.md
lmagent/sandbox/: entrypoint.sh
lmagent/templates/: plan.yaml  spec.yaml
lmagent/workflows/: bugfix-backend.md  ideation.md  new-automation.md  new-feature.md
personas/: ai-agent-engineer.md  architect.md  automation-engineer.md  backend-engineer.md  data-engineer.md  devops-engineer.md  frontend-engineer.md  mobile-engineer.md  orchestrator.md  performance-engineer.md  product-manager.md  prompt-engineer.md  qa-engineer.md  scrum-master.md  security-analyst.md  tech-lead.md  technical-writer.md  ux-ui-designer.md
rules/: _bootstrap.md  agents-ia.md  api-design.md  automations-n8n.md  code-style.md  documentation.md  security.md  stack.md  testing.md  workflow.md
scripts/: bump_version.js  create_skill.js  fix_descriptions.js  global_version_bump.js  install.ps1  install.sh  migrate_to_yaml.js  sync_registry.js  token-analyzer.js  upgrade_skills.js  validate_skills.js
skills/ai-agent-engineer/: SKILL.md
skills/api-designer/: SKILL.md
skills/architect/: SKILL.md
skills/automation-engineer/: SKILL.md
skills/backend-engineer/: SKILL.md
skills/bmad-methodology/: SKILL.md
skills/browser-agent/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/data-engineer/: SKILL.md
skills/devops-engineer/: SKILL.md
skills/document-generator/: SKILL.md
skills/frontend-engineer/: SKILL.md
skills/git-workflow/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/mobile-engineer/: SKILL.md
skills/orchestrator/: SKILL.md
skills/performance-engineer/: SKILL.md
skills/product-manager/: SKILL.md
skills/prompt-engineer/: SKILL.md
skills/qa-engineer/: SKILL.md
skills/scrum-master/: SKILL.md
skills/security-analyst/: SKILL.md
skills/seo-auditor/: SKILL.md
skills/spec-driven-dev/: SKILL.md
skills/supabase-expert/: SKILL.md
skills/swe-agent/: SKILL.md
skills/systematic-debugger/: SKILL.md
skills/tech-lead/: SKILL.md
skills/technical-writer/: SKILL.md
skills/testing-strategist/: SKILL.md
skills/ux-ui-designer/: SKILL.md
src/commands/: create-skill.js  doctor.js  init.js  skills.js  tokens.js  uninstall.js  upgrade.js  validate.js  workflow.js
src/core/: constants.js  ide-registry.js  ide-registry.json
src/utils/: file-system.js
templates/: PROJECT_KICKOFF.md  SKILL_TEMPLATE.md  checkpoint.yaml  project_brief.md  session.yaml  tasks.yaml
templates/agent-python/: README.md
templates/backend-node/: README.md  package.json
templates/backend-python/: .gitignore  requirements-dev.txt
templates/database/: README.md
test-install/: AGENTS.md  CLAUDE.md  package-lock.json  package.json
tests/: conftest.py
tests/unit/: test_cli.py
workflows/: bugfix-backend.md  documentation.md  generate-prd.md  new-agent-ia.md  new-automation.md  new-feature.md  optimize-performance.md  resolve-github-issue.md  security-review.md  spec-driven.md  testing-strategy.md  third-party-integration.md
(+309 files in other folders)
