[project]
name = "lmagent"
version = "3.1.9"
description = "Framework for automation and AI agent development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
    { name = "QuBiit0", email = "info@leandroalvarez.com.ar" }
]
keywords = [
    "ai",
    "agents",
    "automation",
    "llm",
    "framework",
    "mcp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "sqlmodel>=0.0.24",
    "litellm>=1.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
llm = [
    "openai>=1.40",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "litellm>=1.45",
    "langchain>=0.2.10",
    "langgraph>=0.1.5",
]
tools = [
    "aiohttp>=3.10",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pandas>=2.2",
]
all = [
    "lmagent[dev]",
    "lmagent[llm]",
    "lmagent[tools]",
]

[project.urls]
Homepage = "https://github.com/QuBiit0/lmagent"
Documentation = "https://github.com/QuBiit0/lmagent#readme"
Repository = "https://github.com/QuBiit0/lmagent"
Issues = "https://github.com/QuBiit0/lmagent/issues"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["agents"]

# ============================================
# RUFF (Linter & Formatter)
# ============================================

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "lmagent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================
# MYPY (Type Checking)
# ============================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "venv",
    ".venv",
]

# ============================================
# PYTEST
# ============================================

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["agents"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
